--- a/skin/frontend/foundation/default/src/assets/scss/_settings.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/_settings.scss
@@ -74,16 +74,13 @@ $foundation-palette: (
         success: #008B00,
         warning: #ffa500,
         alert: #ff0000,
-        follower: #ed4a00,
-        jura: #e2001a
+        follower: #ed4a00
 );
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
-$green: #b9e700;
-$jura: #e2001a;
 $body-background: $white;
 $body-font-color: $black;
 $body-font-family: Arial, sans-serif;
@@ -287,7 +284,7 @@ $button-padding: 0.85em 1em;
 $button-margin: 0 0 $global-margin 0;
 $button-fill: solid;
 $button-background: $primary-color;
-$button-background-hover: scale-color($button-background, $lightness: -15%);
+$button-background-hover: scale-color($button-background, $lightness: +15%);
 $button-color: $white;
 $button-color-alt: $black;
 $button-radius: $global-radius;
