--- a/skin/frontend/foundation/default/src/assets/scss/app.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/app.scss
@@ -19,7 +19,7 @@
 @include foundation-breadcrumbs;
 @include foundation-button-group;
 @include foundation-callout;
-//@include foundation-card;
+@include foundation-card;
 @include foundation-close-button;
 @include foundation-menu;
 @include foundation-menu-icon;
