--- a/app/design/frontend/foundation/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view.phtml
@@ -75,21 +75,23 @@ if (!function_exists('clean')) {
                     <?php echo $this->getChildHtml('product_type_data') ?>
                     <?php if (!empty($_product->getData('follower'))): ?>
                         <li class="bullet-item">
-                            <a class="button follower" href="<?php echo $this->getUrl('', array('_direct'=>$_product->getData('follower'))); ?>">Nachfolger zeigen</a>
+                            <a class="button follower"
+                               href="<?php echo $this->getUrl('', array('_direct' => $_product->getData('follower'))); ?>">Nachfolger
+                                zeigen</a>
                         </li>
                     <?php endif; ?>
                     <?php if (!empty($_product->getAttributeText('manufacturer'))): ?>
                         <?php if ($_product->getAttributeText('manufacturer') != 'Jura'): ?>
-                        <li class="description">
-                            <div class="product-brand">
-                                <?php $brand = $_product->getAttributeText('manufacturer') ?>
-                                <a href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB) . 'hersteller/' . clean($brand) ?>">
-                                    <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA); ?>catalog/brands/<?php echo clean($brand) ?>.png"
-                                         alt="<?php echo $brand ?> Logo"
-                                         title="<?php echo $this->__('Zeige alle Artikel von %s', $brand) ?>">
-                                </a>
-                            </div>
-                        </li>
+                            <li class="description">
+                                <div class="product-brand">
+                                    <?php $brand = $_product->getAttributeText('manufacturer') ?>
+                                    <a href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB) . 'hersteller/' . clean($brand) ?>">
+                                        <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA); ?>catalog/brands/<?php echo clean($brand) ?>.png"
+                                             alt="<?php echo $brand ?> Logo"
+                                             title="<?php echo $this->__('Zeige alle Artikel von %s', $brand) ?>">
+                                    </a>
+                                </div>
+                            </li>
                         <?php endif; ?>
                         <li class="bullet-item">
                             <a href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB) . 'hersteller/' . clean($brand) ?>">
@@ -100,7 +102,8 @@ if (!function_exists('clean')) {
                     <?php if ($_product->getAttributeText('manufacturer') == 'Jura'): ?>
                         <li class="bullet-item">
                             <p>Unser Jura Ladengeschäft - Jura Abholmarkt</p>
-                            <a href="<?php echo $this->getUrl('', array('_direct'=>'jura-fachhaendler')); ?>">zu den Öffnungszeiten und zur
+                            <a href="<?php echo $this->getUrl('', array('_direct' => 'jura-fachhaendler')); ?>">zu den
+                                Öffnungszeiten und zur
                                 Anfahrtsbeschreibung</a>
                         </li>
                     <?php endif; ?>
