--- a/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
@@ -93,7 +93,7 @@ $owl-dot-background-active: $primary-color !default;
     position: absolute;
     top: 10%;
     right: 10%;
-    background: $jura;
+    background: #E2001A;
     color: white;
     font-weight: bold;
     font-size: 3rem;
@@ -104,7 +104,7 @@ $owl-dot-background-active: $primary-color !default;
     position: absolute;
     top: 10%;
     right: 10%;
-    background: $jura;
+    background: #E2001A;
     color: white;
     font-weight: bold;
     font-size: 2rem;
@@ -119,7 +119,7 @@ $owl-dot-background-active: $primary-color !default;
   .owl-nav {
     [class*='owl-'] {
       &:hover {
-        background: $jura;
+        background: #E2001A;
       }
     }
   }
