change header slogan

--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -38,7 +38,7 @@
         </div>
         <div class="trusted">
             <ul class="menu">
-                <li class="quality-since">über 25 Jahre <span>beste Gastro-Qualität</span></li>
+                <li class="quality-since">since 1990 <span>best quality</span></li>
                 <li>
                     <a class="tuvsudmodal">
                         <img src="<?php echo $this->getSkinUrl('dist/assets/img/safer-shopping.png'); ?>"
