--- a/app/design/frontend/foundation/default/template/catalog/product/view/type/default.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view/type/default.phtml
@@ -29,10 +29,13 @@
 <li class="price">
     <?php echo $this->getPriceHtml($_product) ?>
 </li>
-<?php if($_product->getData('custom_quote')==1): ?>
-<li class="bullet-item">
-    <span style="color:red;font-weight:bold;"><?php echo $this->__('Fragen Sie uns nach Ihrem günstigen Hauspreis</br>Tel. 0800-456-6000') ?></span>
-</li>
+<?php if ($_product->getData('custom_quote') == 1): ?>
+    <li class="bullet-item">
+        <div class="custom-quote text-center">
+            <p>Erfragen Sie unseren <strong>aktuellen Tagespreis!</strong></p>
+            <i class="fa fa-phone"></i> 0800 456 6000
+        </div>
+    </li>
 <?php endif; ?>
 <?php echo $this->getTierPriceHtml() ?>
 <?php if ($this->displayProductStockStatus()): ?>
