--- a/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
@@ -43,6 +43,7 @@ header {
           @include breakpoint(retina) {
             font-size: .9rem;
           }
+          margin-right: .5em;
           font-size: 1.2rem;
           font-weight: 500;
           letter-spacing: .02rem;
