change footer small things

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -162,7 +162,7 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/rational/kombidaempfer')); ?>"><?php echo $this->__('Rational Kombid&auml;mpfer') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/winterhalter/geschirrspuelmaschinen')); ?>"><?php echo $this->__('Winterhalter Geschirrsp&uuml;lmaschinen') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/winterhalter')); ?>"><?php echo $this->__('Winterhalter Sp&uuml;lmaschinen') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/jura/kaffeevollautomaten')); ?>"><?php echo $this->__('JURA Kaffeevollautomaten') ?></a>
@@ -177,7 +177,7 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/piazza-doro')); ?>"><?php echo $this->__('Piazza D\'oro Espresso') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/hupfer/servierwagen')); ?>"><?php echo $this->__('Hupfer Servierwagen') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/rational/variocooking-center')); ?>"><?php echo $this->__('VarioCookingCenter') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/chromonorm')); ?>"><?php echo $this->__('ChromoNorm Edelstahlm&ouml;bel') ?></a>
