--- a/app/design/frontend/foundation/default/template/catalog/product/price_catalog.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/price_catalog.phtml
@@ -191,7 +191,7 @@ $_msrpPrice = $this->helper('tax')->getPrice($_product, $_product->getMsrp());
                     <?php echo $_coreHelper->currency($_price + $weeeAmountToDisplay, true, true) ?>
                 </span>
                 <?php else: ?>
-                <?php if (!empty($_product->getAttributeText('manufacturer')) && $_product->getAttributeText('manufacturer') == 'Unox'): ?>
+                <?php if (!empty($_product->getAttributeText('manufacturer')) && $_product->getAttributeText('manufacturer') == 'undefine'): ?>
                     <?php if ($_finalPrice == $_price): ?>
                         <?php $_skprice = $_price; ?>
                         <?php $discount = $_price - $_skprice; ?>
