change footer links

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -94,7 +94,7 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'contacts')); ?>"><?php echo $this->__('Kontakt') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'wir-planen-gastro-kuechen')); ?>"><?php echo $this->__('K&uuml;chenplanung') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'grosskuechenplanung')); ?>"><?php echo $this->__('Gro&szlig;k&uuml;chenplanung') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'leistungen')); ?>"><?php echo $this->__('Leistungen') ?></a>
