--- a/app/design/frontend/foundation/default/template/catalog/product/list_jura.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list_jura.phtml
@@ -69,9 +69,7 @@ $_helper = $this->helper('catalog/output');
         <?php $_columnCount = $this->getColumnCount(); ?>
             <ul class="products-grid">
                 <?php $i = 0;
-                foreach ($_productCollection
-
-                as $_product): ?>
+                foreach ($_productCollection as $_product): ?>
                 <li class="item">
                     <?php if ($_product->getFinalPrice() < $_product->getPrice()) { ?>
                         <?php $_savingPercent = 100 - round(($_product->getFinalPrice() / $_product->getPrice()) * 100); ?>
@@ -101,6 +99,11 @@ $_helper = $this->helper('catalog/output');
                         ->setIdSuffix($idSuffix = 'amit')
                         ->toHtml(); ?>
                     <?php //echo $this->getPriceHtml($_product, true) ?>
+                    <?php if ($_product->getData('commissioning') == 1): ?>
+                        <?php $productAttribute = $_product->getResource()->getAttribute('commissioning'); ?>
+                        <?php $_label = $productAttribute->getStoreLabel(Mage::app()->getStore()->getId()); ?>
+                        <span class="commissioning"><?php echo $_label; ?></span>
+                    <?php endif; ?>
                     <?php if ($_compareUrl = $this->getAddToCompareUrl($_product)): ?>
                         <div class="compare">
                             <a href="<?php echo $_compareUrl ?>"><?php echo $this->__('Add to Compare') ?></a>
