add commissioning to product/list

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -191,8 +191,8 @@
       }
     }
     .commissioning {
-      color: $white;
-      background: $alert-color;
+      font-size: 0.8rem;
+      color: $alert-color;
     }
     .price-box {
       font-size: .8rem;
