--- a/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
@@ -289,10 +289,18 @@ header {
     .product-options {
       dl.last {
         @include xy-grid;
-        justify-content: center;
-        align-items: center;
         .option {
           @include xy-cell(12, false, 0);
+          li.with-image label {
+            @include xy-grid;
+            align-items: center;
+            img {
+              @include xy-cell(4, false, 0);
+            }
+            span.text {
+              @include xy-cell(8);
+            }
+          }
         }
       }
       dl {
