--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -338,7 +338,7 @@
         color: $primary-color;
       }
     }
-    input[type='radio']:checked + span label, input[type='checkbox']:checked + span label {
+    input[type='radio']:checked + span label span.text, input[type='checkbox']:checked + span label span.text {
       color: $success-color;
       border-color: $success-color;
       &:after {
