change product options output for new module

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -354,8 +354,11 @@
         color: $success-color;
       }
     }
-    .show-more {
+    .more {
       cursor: pointer;
+      &:hover {
+        color: $success-color;
+      }
     }
   }
   .input-box {
