--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -52,6 +52,7 @@
 //Category & Manufacturers
 .categories-grid, .categories-home-grid, .categories-jura-grid, .manufacturers-grid {
   padding: 0 0 1em 0;
+  list-style-type: none;
   li {
     padding: .5em;
     border: 1px solid $medium-gray;
