small changes on footer css

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_footer.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_footer.scss
@@ -30,8 +30,11 @@ footer {
       }
     }
     @include breakpoint(small only) {
-      ul li {
-        text-align: center;
+      ul {
+        list-style-type: none;
+        li {
+          text-align: center;
+        }
       }
     }
     p {
