--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -63,6 +63,7 @@
         border: solid 1px $light-gray;
         ul {
           list-style-type: none;
+          margin: 0;
           li {
             text-align: center;
             img {
