--- a/app/design/frontend/foundation/default/template/catalog/product/view/type/default.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view/type/default.phtml
@@ -45,7 +45,7 @@
                 <span><?php echo $this->__('In stock') ?></span></p>
         <?php if ($_product->getData('tradinginhouse') == 1): ?>
                 <p class="tradinginhouse">
-                    In unseren <a data-open="jura-routenplaner">JURA-Fachgesch&auml;ft</a> sofort abholbereit!
+                    In unserem <a data-open="jura-routenplaner">JURA-Fachgesch&auml;ft</a> sofort abholbereit!
                 </p>
         <?php endif; ?>
         </li>
@@ -55,7 +55,7 @@
                 <span><?php echo $this->__('Out of stock') ?></span></p>
             <?php if ($_product->getData('tradinginhouse') == 1): ?>
                 <p class="tradinginhouse">
-                    In unseren <a data-open="jura-routenplaner">JURA-Fachgesch&auml;ft</a> sofort abholbereit!
+                    In unserem <a data-open="jura-routenplaner">JURA-Fachgesch&auml;ft</a> sofort abholbereit!
                 </p>
             <?php endif; ?>
         </li>
