add logo to footer extras

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -12,6 +12,8 @@
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/versandkostenfrei.png') ?>"
                      alt="kostenfreie Lieferung ab 99 EUR">
             </a>
+            <img src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
+                     alt="Logo" class="footer-logo"/>
             <a href="<?php echo Mage::getUrl('', array('_direct' =>'jobs')); ?>">
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/jobs.png') ?>"
                      alt="Jobs &amp; Careers">
