--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -452,6 +452,9 @@
     table {
       margin-bottom: 0;
     }
+    .button {
+      margin-bottom: 0;
+    }
   }
   .title {
     color: $primary-color;
