--- a/app/design/frontend/foundation/default/template/page/html/head.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/head.phtml
@@ -13,6 +13,8 @@
 <script type="text/javascript" src="<?php echo $this->getSkinUrl('dist/assets/js/jquery.min.js') ?>"></script>
 <script>jQuery.noConflict();</script>
 <script type="text/javascript" src="<?php echo $this->getSkinUrl('dist/assets/js/app.js') ?>"></script>
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="25fb20bc-33d1-46f6-acfb-4fe6f0da1561" data-blockingmode="auto" type="text/javascript"></script>
+<script id="CookieDeclaration" src="https://consent.cookiebot.com/25fb20bc-33d1-46f6-acfb-4fe6f0da1561/cd.js" type="text/javascript" async></script>
 <?php echo $this->getCssJsHtml() ?>
 <?php echo $this->getChildHtml() ?>
 <?php echo $this->helper('core/js')->getTranslatorScript() ?>
